--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Ganesh Kr Gupta</title>
 </head>
 <body>
-  
+  <div id="main">
+    <div id="page1">
+      <nav>
+        
+      </nav>
+    </div>
+  </div>
 </body>
 </html>
