--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 <body>
   <div id="main">
     <div id="page1">
-      <nav>
-        
-      </nav>
+      <div id="nav"> 
+        <img src="image-removebg-preview (2).png" alt="logo">
+        <div id="nav-2">
+           <h4><a href="#">About</a></h4>
+           <h4><a href="#">Work</a></h4>
+           <h4><a href="#">Contact</a></h4>
+        </div>
+      </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
