--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
            <h4><a href="#">Contact</a></h4>
         </div>
       </div>
+
+      <div id="center">
+          <div id="left">
+            <h1>Ganesh</h1>
+            <h1>Kumar</h1>
+            <h2>Web Devloper</h2>
+          </div>
+          <div id="right"></div>
+      </div>
+
     </div>
   </div>
   <script src="script.js"></script>
