--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
           <div id="left">
             <h1>Ganesh</h1>
             <h1>Kumar</h1>
-            <h2>Web Devloper</h2>
           </div>
-          <div id="right"></div>
+          <div id="right">
+            <img src="photo_2024-01-20_19-27-05.jpg" alt="photo" class="me"> 
+          </div>
       </div>
 
     </div>
+    <div id="hero-shape">
+      <div id="hero-1"></div>
+      <div id="hero-2"></div>
+      <div id="hero-3"></div>
+  </div>
+  </div>
   </div>
   <script src="script.js"></script>
 </body>
