--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+  <title>Ganesh Kr Gupta</title>
+  <link rel="icon" href="./icon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="style.css">
-  <title>Ganesh Kr Gupta</title>
 </head>
 <body>
   <div id="main">
@@ -30,15 +30,54 @@
             <img src="photo_2024-01-20_19-27-05.jpg" alt="photo" class="me"> 
           </div>
       </div>
-
+      <div id="mvtext">
+        <div class="con">
+          <h1>DESIGNER</h1>
+          <div id="icn"></div>
+          <h1>WEB DEVELOPER</h1>
+          <div id="icn"></div>
+          <h1>STUDENT</h1>
+          <div id="icn"></div>
+        </div>
+        <div class="con">
+          <h1>DESIGNER</h1>
+          <div id="icn"></div>
+          <h1>WEB DEVLOPER</h1>
+          <div id="icn"></div>
+          <h1>STUDENT</h1>
+          <div id="icn"></div>
+        </div>
+        <div class="con">
+          <h1>DESIGNER</h1>
+          <div id="icn"></div>
+          <h1>WEB DEVELOPER</h1>
+          <div id="icn"></div>
+          <h1>STUDENT</h1>
+          <div id="icn"></div>
+        </div>
+      </div>
+      <div id="hero-shape">
+        <div id="hero-1"></div>
+        <div id="hero-2"></div>
+        <div id="hero-3"></div>
     </div>
-    <div id="hero-shape">
-      <div id="hero-1"></div>
-      <div id="hero-2"></div>
-      <div id="hero-3"></div>
+    </div>
+    
+    <div id="page2">
+      </div>
+      <div id="page2-bottom">
+          <h1>Passionate 2nd year student at IIIT Manipur pursuing a B.Tech in Computer Science with AI and DS. Learning DSA with Java, good in Python and studied C programming in my course. Co-founder of Engify.in, a college startup, where I contribute as an AI engineer, web developer, and digital marketer.  Committed to driving innovation and creating impactful solutions. Eager to learn, grow, and collaborate on exciting projects. Let's connect and explore new opportunities together.</h1>
+          <div id="bottom-part2">
+              <img src="snippet.png"
+                  alt="">
+              <p>some para</p>
+          </div>
+      </div>
+    </div>
   </div>
-  </div>
-  </div>
+</div>
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 </html>
