--- a/index.html
+++ b/index.html
@@ -27,10 +27,26 @@
             <h1>Kumar</h1>
           </div>
           <div id="right">
-            <img src="photo_2024-01-20_19-27-05.jpg" alt="photo" class="me"> 
+            <img src="me.jpg" alt="photo" class="me"> 
           </div>
       </div>
       <div id="mvtext">
+        <div class="con">
+          <h1>DESIGNER</h1>
+          <div id="icn"></div>
+          <h1>WEB DEVELOPER</h1>
+          <div id="icn"></div>
+          <h1>STUDENT</h1>
+          <div id="icn"></div>
+        </div>
+        <div class="con">
+          <h1>DESIGNER</h1>
+          <div id="icn"></div>
+          <h1>WEB DEVELOPER</h1>
+          <div id="icn"></div>
+          <h1>STUDENT</h1>
+          <div id="icn"></div>
+        </div>
         <div class="con">
           <h1>DESIGNER</h1>
           <div id="icn"></div>
@@ -63,7 +79,7 @@
     </div>
     </div>
     
-    <div id="page2">
+ <div id="page2">
       </div>
       <div id="page2-bottom">
           <h1>Passionate 2nd year student at IIIT Manipur pursuing a B.Tech in Computer Science with AI and DS. Learning DSA with Java, good in Python and studied C programming in my course. Co-founder of Engify.in, a college startup, where I contribute as an AI engineer, web developer, and digital marketer.  Committed to driving innovation and creating impactful solutions. Eager to learn, grow, and collaborate on exciting projects. Let's connect and explore new opportunities together.</h1>
@@ -73,9 +89,45 @@
               <p>some para</p>
           </div>
       </div>
+
+      <div id="page3">
+        <div class="featured_header"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
+        <div id="elem-container">
+            <div id="elem1" class="elem" data-image="">
+                <div class="overlay"></div>
+                <h2>Makers Studio HOI</h2>
+            </div>
+            <div class="elem"
+                data-image="Photo by Markus Spiske: https://www.pexels.com/photo/green-and-yellow-printed-textile-330771/">
+                <div class="overlay"></div>
+                <h2>50th Anniversary</h2>
+            </div>
+            <div class="elem"
+                data-image="https://images.unsplash.com/photo-1701077137611-9be394bf62f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D">
+                <div class="overlay"></div>
+                <h2>NYFW Popup</h2>
+            </div>
+            <div class="featured_header2"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
+            <div class="elem"
+                data-image="https://images.unsplash.com/photo-1701014159309-4a8b84faadfe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D">
+                <div class="overlay"></div>
+                <h2>Air Force 1 2021</h2>
+            </div>
+            <div class="elem"
+                data-image="https://images.unsplash.com/photo-1700924546093-f914fd5b8814?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D">
+                <div class="overlay"></div>
+                <h2>SOHO NYC</h2>
+            </div>
+            <div class="elem"
+                data-image="https://images.unsplash.com/photo-1700601437860-e66da79cf6d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHx8fA%3D%3D">
+                <div class="overlay"></div>
+                <h2>SOHO 2023</h2>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
+
+    
+    </div>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
