--- a/index.html
+++ b/index.html
@@ -95,33 +95,33 @@
         <div id="elem-container">
             <div id="elem1" class="elem" data-image="">
                 <div class="overlay"></div>
-                <h2>Makers Studio HOI</h2>
+                <h2>Coming Soon</h2>
             </div>
             <div class="elem"
-                data-image="Photo by Markus Spiske: https://www.pexels.com/photo/green-and-yellow-printed-textile-330771/">
+                data-image="">
                 <div class="overlay"></div>
-                <h2>50th Anniversary</h2>
+                <h2>Coming Soon</h2>
             </div>
             <div class="elem"
-                data-image="https://images.unsplash.com/photo-1701077137611-9be394bf62f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D">
+                data-image="">
                 <div class="overlay"></div>
-                <h2>NYFW Popup</h2>
+                <h2>Coming Soon</h2>
             </div>
             <div class="featured_header2"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
             <div class="elem"
-                data-image="https://images.unsplash.com/photo-1701014159309-4a8b84faadfe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D">
+                data-image="">
                 <div class="overlay"></div>
-                <h2>Air Force 1 2021</h2>
+                <h2>Coming Soon</h2>
             </div>
             <div class="elem"
-                data-image="https://images.unsplash.com/photo-1700924546093-f914fd5b8814?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D">
+                data-image="">
                 <div class="overlay"></div>
-                <h2>SOHO NYC</h2>
+                <h2>Coming Soon</h2>
             </div>
             <div class="elem"
-                data-image="https://images.unsplash.com/photo-1700601437860-e66da79cf6d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHx8fA%3D%3D">
+                data-image="">
                 <div class="overlay"></div>
-                <h2>SOHO 2023</h2>
+                <h2>Coming Soon</h2>
             </div>
         </div>
     </div>
