--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="fixed-image">
+    
+  </div>
+
   <div id="main">
+
     <div id="page1">
       <div id="nav"> 
         <img src="image-removebg-preview (2).png" alt="logo">
@@ -90,31 +95,31 @@
           </div>
       </div>
 
-      <div id="page3">
+ <div id="page3">
         <div class="featured_header"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
         <div id="elem-container">
-            <div id="elem1" class="elem" data-image="">
+            <div id="elem1" class="elem" data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
                 <div class="overlay"></div>
                 <h2>Coming Soon</h2>
             </div>
             <div class="elem"
-                data-image="">
+                data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
                 <div class="overlay"></div>
                 <h2>Coming Soon</h2>
             </div>
             <div class="elem"
-                data-image="">
+                data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
                 <div class="overlay"></div>
                 <h2>Coming Soon</h2>
             </div>
             <div class="featured_header2"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
             <div class="elem"
-                data-image="">
+                data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
                 <div class="overlay"></div>
                 <h2>Coming Soon</h2>
             </div>
             <div class="elem"
-                data-image="">
+                data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
                 <div class="overlay"></div>
                 <h2>Coming Soon</h2>
             </div>
@@ -126,9 +131,9 @@
         </div>
     </div>
 
-    
+   
     </div>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
