--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="loader">
+    <h1>ENVIRONMENTS</h1>
+    <h1>EXPERIENCES</h1>
+    <h1>CONTENT</h1>
+</div>
   <div id="fixed-image">
     
   </div>
@@ -17,14 +22,15 @@
   <div id="main">
 
     <div id="page1">
-      <div id="nav"> 
+      <nav>
         <img src="image-removebg-preview (2).png" alt="logo">
         <div id="nav-2">
            <h4><a href="#">About</a></h4>
            <h4><a href="#">Work</a></h4>
            <h4><a href="#">Contact</a></h4>
         </div>
-      </div>
+        <h3>Menu</h3>
+      </nav>
 
       <div id="center">
           <div id="left">
@@ -131,7 +137,13 @@
         </div>
     </div>
 
-   
+    <div id="full-scr">
+      <div id="full-div1">
+          
+      </div>
+  </div>
+
+  </div>
     </div>
   <script type="module" src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
