--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav>
         <img src="image-removebg-preview (2).png" alt="logo">
         <div id="nav-2">
-           <h4><a href="#">About</a></h4>
+           <h4><a href="https://www.linkedin.com/in/gan3xh/">About</a></h4>
            <h4><a href="#">Work</a></h4>
            <h4><a href="#">Contact</a></h4>
         </div>
@@ -101,6 +101,16 @@
           </div>
       </div>
 
+      <div id="pg2">
+      <div id="lft">
+        <img src="developerActivity.59389695 - Copy.svg" alt="art" class="art">
+      </div>
+      <div id="rgt">
+        <img src="Screenshot_2024-02-18_191556-removebg-preview.png" alt="skills" class="skills">
+      </div>
+      </div>
+
+
  <div id="page3">
         <div class="featured_header"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
         <div id="elem-container">
@@ -136,6 +146,19 @@
             </div>
         </div>
     </div>
+
+  <div id="pg5">
+    <div id="lft5">
+      <img src="contactMail.68e84138-removebg-preview.png" alt="contact" class="contact">
+    </div>
+    <div id="rgt5">
+      <br><br><br><br><br><br>
+      <h1 id="cnt">Contact Me!</h1><br><br>
+      <p id="pcnt">DISCUSS A PROJECT, REQUEST A FREE OPEN SOURCE COLLABORATION OR JUST SAY HI? MY INBOX IS OPEN FOR ALL.</p>
+      <br><br><br>
+      <a href="ganeshk77gupta@gmail.com" id="email">ganeshk77gupta@gmail.com</a>
+    </div>
+  </div>
 
     <div id="full-scr">
       <div id="full-div1">
