--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       </nav>
 
       <div id="center">
-          <div id="left">
+          <div id="lft">
             <span class="auto-type">Hey!</span>
-            <h1 class="hi"> I'm</h1>
-            <h1 class="name">Ganesh Kumar</h1>
             <br><br>
+           <div id="nn"><h1 class="name">Ganesh Kumar</h1></div>
+            <br><br><br>
             <div id="ricn">
               <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="45" height="45" fill="currentColor">
@@ -54,11 +54,16 @@
               <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="45" height="45" fill="currentColor"><path fill="#000000" d="M13.0281 2.00073C14.1535 2.00259 14.7238 2.00855 15.2166 2.02322L15.4107 2.02956C15.6349 2.03753 15.8561 2.04753 16.1228 2.06003C17.1869 2.1092 17.9128 2.27753 18.5503 2.52503C19.2094 2.7792 19.7661 3.12253 20.3219 3.67837C20.8769 4.2342 21.2203 4.79253 21.4753 5.45003C21.7219 6.0867 21.8903 6.81337 21.9403 7.87753C21.9522 8.1442 21.9618 8.3654 21.9697 8.58964L21.976 8.78373C21.9906 9.27647 21.9973 9.84686 21.9994 10.9723L22.0002 11.7179C22.0003 11.809 22.0003 11.903 22.0003 12L22.0002 12.2821L21.9996 13.0278C21.9977 14.1532 21.9918 14.7236 21.9771 15.2163L21.9707 15.4104C21.9628 15.6347 21.9528 15.8559 21.9403 16.1225C21.8911 17.1867 21.7219 17.9125 21.4753 18.55C21.2211 19.2092 20.8769 19.7659 20.3219 20.3217C19.7661 20.8767 19.2069 21.22 18.5503 21.475C17.9128 21.7217 17.1869 21.89 16.1228 21.94C15.8561 21.9519 15.6349 21.9616 15.4107 21.9694L15.2166 21.9757C14.7238 21.9904 14.1535 21.997 13.0281 21.9992L12.2824 22C12.1913 22 12.0973 22 12.0003 22L11.7182 22L10.9725 21.9993C9.8471 21.9975 9.27672 21.9915 8.78397 21.9768L8.58989 21.9705C8.36564 21.9625 8.14444 21.9525 7.87778 21.94C6.81361 21.8909 6.08861 21.7217 5.45028 21.475C4.79194 21.2209 4.23444 20.8767 3.67861 20.3217C3.12278 19.7659 2.78028 19.2067 2.52528 18.55C2.27778 17.9125 2.11028 17.1867 2.06028 16.1225C2.0484 15.8559 2.03871 15.6347 2.03086 15.4104L2.02457 15.2163C2.00994 14.7236 2.00327 14.1532 2.00111 13.0278L2.00098 10.9723C2.00284 9.84686 2.00879 9.27647 2.02346 8.78373L2.02981 8.58964C2.03778 8.3654 2.04778 8.1442 2.06028 7.87753C2.10944 6.81253 2.27778 6.08753 2.52528 5.45003C2.77944 4.7917 3.12278 4.2342 3.67861 3.67837C4.23444 3.12253 4.79278 2.78003 5.45028 2.52503C6.08778 2.27753 6.81278 2.11003 7.87778 2.06003C8.14444 2.04816 8.36564 2.03847 8.58989 2.03062L8.78397 2.02433C9.27672 2.00969 9.8471 2.00302 10.9725 2.00086L13.0281 2.00073ZM12.0003 7.00003C9.23738 7.00003 7.00028 9.23956 7.00028 12C7.00028 14.7629 9.23981 17 12.0003 17C14.7632 17 17.0003 14.7605 17.0003 12C17.0003 9.23713 14.7607 7.00003 12.0003 7.00003ZM12.0003 9.00003C13.6572 9.00003 15.0003 10.3427 15.0003 12C15.0003 13.6569 13.6576 15 12.0003 15C10.3434 15 9.00028 13.6574 9.00028 12C9.00028 10.3431 10.3429 9.00003 12.0003 9.00003ZM17.2503 5.50003C16.561 5.50003 16.0003 6.05994 16.0003 6.74918C16.0003 7.43843 16.5602 7.9992 17.2503 7.9992C17.9395 7.9992 18.5003 7.4393 18.5003 6.74918C18.5003 6.05994 17.9386 5.49917 17.2503 5.50003Z"></path></svg></a>
 
-              <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="45" height="45" fill="currentColor"><path fill="#000000" d="M3 3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3ZM12.0606 11.6829L5.64722 6.2377L4.35278 7.7623L12.0731 14.3171L19.6544 7.75616L18.3456 6.24384L12.0606 11.6829Z"></path></svg></a>
+              <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;" target="_blank" rel="noopener noreferrer">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"  width="45" height="45" fill="#000000"><path d="M20 22H4C3.44772 22 3 21.5523 3 21V8H21V21C21 21.5523 20.5523 22 20 22ZM21 6H3V3C3 2.44772 3.44772 2 4 2H20C20.5523 2 21 2.44772 21 3V6ZM7 11V15H11V11H7ZM7 17V19H17V17H7ZM13 12V14H17V12H13Z"></path></svg></a> 
             </div>
           </div>
           <div id="right">
+            <div id="hero-shape">
+              <div id="hero-1"></div>
+              <div id="hero-2"></div>
+              <div id="hero-3"></div>
+          </div>
             <img src="me.jpg" alt="photo" class="me"> 
           </div>
       </div>
@@ -133,7 +138,7 @@
 
 
  <div id="page3">
-        <div class="featured_header"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
+  <div id="hd"><div id="icn2"></div> <h1 id="pj">Featured Projects</h1></div>
         <div id="elem-container">
             <div id="elem1" class="elem" data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
                 <div class="overlay"></div>
@@ -149,7 +154,8 @@
                 <div class="overlay"></div>
                 <h2>Coming Soon</h2>
             </div>
-            <div class="featured_header2"><div class="red-dot"></div><h2 class="heading-style-h6">featured projects</h2></div>
+            <br><br><br><br><br>
+            <div id="hd"><div id="icn2"></div> <h1 id="pj">Achievements</h1></div>
             <div class="elem"
                 data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
                 <div class="overlay"></div>
@@ -169,17 +175,37 @@
     </div>
 
   <div id="pg5">
-    <div id="lft5">
-      <img src="contactMail.68e84138-removebg-preview.png" alt="contact" class="contact">
-    </div>
-    <div id="rgt5">
-      <br><br><br><br><br><br>
-      <h1 id="cnt">Contact Me!</h1><br><br>
-      <p id="pcnt">DISCUSS A PROJECT, REQUEST A FREE OPEN SOURCE COLLABORATION OR JUST SAY HI? MY INBOX IS OPEN FOR ALL.</p>
-      <br><br><br>
-      <a href="ganeshk77gupta@gmail.com" id="email">ganeshk77gupta@gmail.com</a>
-    </div>
+    <div class="container">
+      <h1 id="contact">CONTACT ME</h1>
+      <p id="contact1">HIRE ME, DISCUSS A PROJECT, REQUEST A FREE OPEN SOURCE COLLABORATION OR JUST SAY HI? MY INBOX IS OPEN FOR ALL.</p>
+      <div class="contact-details">
+          <div class="contact-item1">
+            <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;" target="_blank" rel="noopener noreferrer">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="45" height="45" fill="#000000"><path d="M17.0839 15.812C19.6827 13.0691 19.6379 8.73845 16.9497 6.05025C14.2161 3.31658 9.78392 3.31658 7.05025 6.05025C4.36205 8.73845 4.31734 13.0691 6.91612 15.812C7.97763 14.1228 9.8577 13 12 13C14.1423 13 16.0224 14.1228 17.0839 15.812ZM12 23.7279L5.63604 17.364C2.12132 13.8492 2.12132 8.15076 5.63604 4.63604C9.15076 1.12132 14.8492 1.12132 18.364 4.63604C21.8787 8.15076 21.8787 13.8492 18.364 17.364L12 23.7279ZM12 12C10.3431 12 9 10.6569 9 9C9 7.34315 10.3431 6 12 6C13.6569 6 15 7.34315 15 9C15 10.6569 13.6569 12 12 12Z"></path></svg></a>
+              <p>Indian Institute of Information Technology,<br> Senapati, Manipur, India</p>
+          </div>
+          <div class="contact-item">
+            <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;" target="_blank" rel="noopener noreferrer">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"  width="45" height="45" fill="#000000"><path d="M20 22H4C3.44772 22 3 21.5523 3 21V8H21V21C21 21.5523 20.5523 22 20 22ZM21 6H3V3C3 2.44772 3.44772 2 4 2H20C20.5523 2 21 2.44772 21 3V6ZM7 11V15H11V11H7ZM7 17V19H17V17H7ZM13 12V14H17V12H13Z"></path></svg></a>
+              <p>Resume</p>
+          </div>
+         
+          <div class="contact-item3">
+            <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;" target="_blank" rel="noopener noreferrer">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="45" height="45" fill="currentColor"><path fill="#000000" d="M3 3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3ZM12.0606 11.6829L5.64722 6.2377L4.35278 7.7623L12.0731 14.3171L19.6544 7.75616L18.3456 6.24384L12.0606 11.6829Z"></path></svg></a>
+              <p>ganeshk77gupta@iiitmanipur.ac.in</p>
+          </div>
+          <div class="contact-item2">
+            <a href="https://www.linkedin.com/in/gan3xh/"  style="text-decoration: none;" target="_blank" rel="noopener noreferrer">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="45" height="45" fill="#000000"><path d="M21 16.42V19.9561C21 20.4811 20.5941 20.9167 20.0705 20.9537C19.6331 20.9846 19.2763 21 19 21C10.1634 21 3 13.8366 3 5C3 4.72371 3.01545 4.36687 3.04635 3.9295C3.08337 3.40588 3.51894 3 4.04386 3H7.5801C7.83678 3 8.05176 3.19442 8.07753 3.4498C8.10067 3.67907 8.12218 3.86314 8.14207 4.00202C8.34435 5.41472 8.75753 6.75936 9.3487 8.00303C9.44359 8.20265 9.38171 8.44159 9.20185 8.57006L7.04355 10.1118C8.35752 13.1811 10.8189 15.6425 13.8882 16.9565L15.4271 14.8019C15.5572 14.6199 15.799 14.5573 16.001 14.6532C17.2446 15.2439 18.5891 15.6566 20.0016 15.8584C20.1396 15.8782 20.3225 15.8995 20.5502 15.9225C20.8056 15.9483 21 16.1633 21 16.42Z"></path></svg></a>
+              <p>+91-7717799843</p>
+          </div>
+      </div>
+      <a href="#" class="question-link">Have a Question? <span>CLICK HERE</span></a>
   </div>
+  </div>
+
+
     <div id="full-scr">
       <div id="full-div1">
           
@@ -192,7 +218,7 @@
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   <script>
     var typed = new Typed(".auto-type",{
-      strings : ["Hey!", "Welcome!", "Nice to see you!"],
+      strings : ["Namaste!", "Welcome!", "Nice seeing you!"],
       typeSpeed : 100,
       backSpeed : 50,
       loop : true
