worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Ganesh Kr Gupta</title>
   <link rel="icon" href="./icon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css">
@@ -264,6 +263,7 @@
     </div>
   <script type="module" src="script.js"></script>
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
     var typed = new Typed(".auto-type",{
       strings : ["Namaste!", "Welcome!", "Nice seeing you!"],
