--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <div id="minicircle"></div>
   <div id="loader">
-    <h1>ENVIRONMENTS</h1>
-    <h1>EXPERIENCES</h1>
-    <h1>CONTENT</h1>
+    <h1>VERSATILE</h1>
+    <h1>CREATIVE</h1>
+    <h1>RELIABLE</h1>
 </div>
   <div id="fixed-image">
     
@@ -70,7 +70,7 @@
         <div class="con">
           <h1>DESIGNER</h1>
           <div id="icn"></div>
-          <h1>WEB DEVELOPER</h1>
+          <h1>DEVELOPER</h1>
           <div id="icn"></div>
           <h1>STUDENT</h1>
           <div id="icn"></div>
@@ -78,7 +78,7 @@
         <div class="con">
           <h1>DESIGNER</h1>
           <div id="icn"></div>
-          <h1>WEB DEVELOPER</h1>
+          <h1>DEVELOPER</h1>
           <div id="icn"></div>
           <h1>STUDENT</h1>
           <div id="icn"></div>
@@ -86,7 +86,7 @@
         <div class="con">
           <h1>DESIGNER</h1>
           <div id="icn"></div>
-          <h1>WEB DEVELOPER</h1>
+          <h1>DEVELOPER</h1>
           <div id="icn"></div>
           <h1>STUDENT</h1>
           <div id="icn"></div>
@@ -94,7 +94,7 @@
         <div class="con">
           <h1>DESIGNER</h1>
           <div id="icn"></div>
-          <h1>WEB DEVLOPER</h1>
+          <h1>DEVLOPER</h1>
           <div id="icn"></div>
           <h1>STUDENT</h1>
           <div id="icn"></div>
@@ -102,7 +102,7 @@
         <div class="con">
           <h1>DESIGNER</h1>
           <div id="icn"></div>
-          <h1>WEB DEVELOPER</h1>
+          <h1>DEVELOPER</h1>
           <div id="icn"></div>
           <h1>STUDENT</h1>
           <div id="icn"></div>
