--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Ganesh Kr Gupta</title>
+  <meta name="description" content="Ganesh Kumar is a Developer and is a B.Tech student at IIITM Senapati">  
+	<meta name="author" content="Ganesh Kumar">
+
+    <meta name="keywords" content="gan3xh, ganesh, ganesh kumar, banglore, developer, web developer, android developer"/>
+    <meta name="subject" content="Ganesh Kumar Portfolio">
+    <meta name="copyright"content="Ganesh Kumar">
+    <meta name="language" content="EN">
+    <meta name="robots" content="index, follow" />
+    <meta name="revised" content="Tuesday, March 19th, 2024, 12:14 am" />
+    <meta name="abstract" content="ganesh kumar">
+    <meta name="topic" content="ganesh kumar portfolio">
+    <meta name="summary" content="This is Ganesh Kumar's Portfolio Website who is a Developer.">
+    <meta name="Classification" content="Business">
+    <meta name="author" content="ganesh kumar, ganeshk77gupta@gmail.com">
+    <meta name="designer" content="ganesh kumar">
+    <meta name="copyright" content="ganesh kumar">
+    <meta name="reply-to" content="ganeshk77gupta@gmail.com">
+    <meta name="owner" content="ganesh kumar">
+    <meta name="url" content="https://gan3xh.github.io/Portfolio/">
+    <meta name="identifier-URL" content="https://gan3xh.github.io/Portfolio/">
+    <meta name="directory" content="submission">
+    <meta name="category" content="Business | Portfolio">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="7 days">
+    <meta http-equiv="Expires" content="0">
+    
   <link rel="icon" href="./icon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
@@ -203,21 +231,21 @@
             </div>
             <br><br><br><br><br>
             <div id="hd"><div id="icn2"></div> <h1 id="pj">Achievements</h1></div>
+
+            <a href="https://www.linkedin.com/in/gan3xh/" style="text-decoration: none; color: #000000;">
+              <div class="elem" data-image="https://images.unsplash.com/photo-1710779830728-24259f195411?q=80&w=1990&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                  <div class="overlay"></div>
+                  <h2>Google Cloud Fly Cup 2023</h2>
+              </div>
+          </a>
+          
+          <a href="https://www.linkedin.com/in/gan3xh/" style="text-decoration: none; color: #000000;">
             <div class="elem"
-                data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
+                data-image="https://images.unsplash.com/photo-1710780748156-647700e1c849?q=80&w=1990&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                 <div class="overlay"></div>
-                <h2>Coming Soon</h2>
+                <h2>1st place in KIMO Tech Competition</h2>
             </div>
-            <div class="elem"
-                data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
-                <div class="overlay"></div>
-                <h2>Coming Soon</h2>
-            </div>
-            <div class="elem"
-                data-image="">
-                <div class="overlay"></div>
-                <h2>Coming Soon</h2>
-            </div>
+            </a>
         </div>
     </div>
   <section id="page5con">
