--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img src="logo.png" width="auto" height="75" alt="logo">
         <div id="nav-2">
            <h4><a href="https://drive.google.com/file/d/17y1UIxRZi7e_j7wtWHFSstutpG5CyxDW/view?usp=sharing" target="_blank">Resume</a></h4>
-           <h4><a href="#second">Work</a></h4>
+           <h4><a href="#second" target="_blank">Work</a></h4>
            <h4><a href="#page5con">Contact</a></h4>
         </div>
         <h3>Menu</h3>
@@ -377,8 +377,8 @@
     <div id="second">
       <div id="hd"><div id="icn2"></div> <h1 id="pj">Featured Projects</h1></div><br>
       <div class="elemf">
-        <a href="https://github.com/gan3xh/Evidhi-InboxIQ" target="_blank" style="text-decoration: none; color: #000000;">
-          <img src="./me.jpg" alt="">
+        <a href="blog\evidhi.html" target="_blank" style="text-decoration: none; color: #000000;">
+          <img src=".\images\pc1.png" alt="">
           <h1>Evidhi: InboxIQ Ai <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" fill="#000000"><path d="M10 6V8H5V19H16V14H18V20C18 20.5523 17.5523 21 17 21H4C3.44772 21 3 20.5523 3 20V7C3 6.44772 3.44772 6 4 6H10ZM21 3V12L17.206 8.207L11.2071 14.2071L9.79289 12.7929L15.792 6.793L12 3H21Z" style="fill:#000000"></path></svg></h1>
         </a>
           <h5>2024</h5>
@@ -506,9 +506,16 @@
   </div>
 </section>
 
+<div id="pg6">
+
+  <p style="font-size: 1.5rem; padding-bottom: 0.5rem;" > प्रेम्णा निर्मितम् &nbsp;<svg viewBox="0 0 1792 1792" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" style="height: 1.2rem;"><path d="M896 1664q-26 0-44-18l-624-602q-10-8-27.5-26T145 952.5 77 855 23.5 734 0 596q0-220 127-344t351-124q62 0 126.5 21.5t120 58T820 276t76 68q36-36 76-68t95.5-68.5 120-58T1314 128q224 0 351 124t127 344q0 221-229 450l-623 600q-18 18-44 18z" fill="#e25555"></path></svg>  &nbsp;भारते गणेश इत्यनेन |</p>
+
+  
+
+</div>
     <div id="full-scr">
       <div id="full-div1">
-          
+      
       </div>
   </div>
 
